create categery and blog and some other modify
Signed-off-by: seniorcandy <seniorgiftcandy@gmail.com>

--- a/www/templates/blogs.html
+++ b/www/templates/blogs.html
@@ -9,5 +9,8 @@
     {% for u in users %}
     <p>{{ u.name }} / {{ u.id }}</p>
     {% endfor %}
+    {% for b in blogs %}
+    <p>{{ b.title }} / {{ b.content }}</p>
+    {% endfor %}
 </body>
 </html>
