--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -57,29 +57,24 @@ $(function () {
   <body>
 
 
-<div class="uk-vertical-align uk-text-center uk-height-1-1">
-    <div class="uk-vertical-align-middle" style="width: 320px">
-        <p><a href="/" class="uk-icon-button"><i class="uk-icon-html5"></i></a> <a href="/">xsinx</a>
-        </p>
-        <form id="vm" v-on:submit="submit" class="uk-panel uk-panel-box uk-form">
-            <div class="uk-alert uk-alert-danger uk-hidden"></div>
-            <div class="uk-form-row">
-                <div class="uk-form-icon uk-width-1-1">
-                    <i class="uk-icon-envelope-o"></i>
-                    <input v-model="name" name="name" type="text" placeholder="用户名" maxlength="50"
-                           class="uk-width-1-1 uk-form-large">
+<div class="">
+    <div class="">
+        <form id="vm" v-on:submit="submit" class="">
+            <div class=""></div>
+            <div class="">
+                <div class="">
+                    <input v-model="name" name="name" type="text" placeholder="用户名" maxlength="50" class="">
                 </div>
             </div>
-            <div class="uk-form-row">
-                <div class="uk-form-icon uk-width-1-1">
-                    <i class="uk-icon-lock"></i>
+            <div class="">
+                <div class="">
+                    <i class=""></i>
                     <input v-model="password" name="password" type="password" placeholder="口令" maxlength="50"
-                           class="uk-width-1-1 uk-form-large">
+                           class="">
                 </div>
             </div>
-            <div class="uk-form-row">
-                <button type="submit" class="uk-width-1-1 uk-button uk-button-primary uk-button-large"><i
-                        class="uk-icon-sign-in"></i> 登录
+            <div class="">
+                <button type="submit" class="">s登录
                 </button>
             </div>
         </form>
