--- a/www/templates/sign_up.html
+++ b/www/templates/sign_up.html
@@ -60,35 +60,35 @@ $(function () {
 
   </head>
   <body>
-    <div class="uk-width-2-3">
+    <div class="">
       <h1>欢迎注册！</h1>
-      <form id="vm" v-on:submit="submit" class="uk-form uk-form-stacked">
-          <ul class="uk-form-danger">
+      <form id="vm" v-on:submit="submit" class="">
+          <ul class="">
               <li v-show="!validation.name">Name cannot be empty.</li>
               <li v-show="!validation.password1">password len < 6.</li>
               <li v-show="!validation.password2">Passwords not equal.</li>
           </ul>
-          <div class="uk-alert uk-alert-danger uk-hidden"></div>
-          <div class="uk-form-row">
-              <label class="uk-form-label">名字:</label>
-              <div class="uk-form-controls">
-                  <input v-model="name" initial="off"  detect-change="off" type="text" maxlength="50" placeholder="名字" class="uk-width-1-1">
+          <div class=""></div>
+          <div class="">
+              <label class="">名字:</label>
+              <div class="">
+                  <input v-model="name" initial="off"  detect-change="off" type="text" maxlength="50" placeholder="名字" class="">
               </div>
           </div>
-          <div class="uk-form-row">
-              <label class="uk-form-label">输入口令:</label>
-              <div class="uk-form-controls">
-                  <input v-model="password1" initial="off"  detect-change="off" type="password" maxlength="50" placeholder="输入口令" class="uk-width-1-1">
+          <div class="">
+              <label class="">输入口令:</label>
+              <div class="">
+                  <input v-model="password1" initial="off"  detect-change="off" type="password" maxlength="50" placeholder="输入口令" class="">
               </div>
           </div>
-          <div class="uk-form-row">
-              <label class="uk-form-label">重复口令:</label>
-              <div class="uk-form-controls">
-                  <input v-model="password2" initial="off"  detect-change="off" type="password" maxlength="50" placeholder="重复口令" class="uk-width-1-1">
+          <div class="">
+              <label class="">重复口令:</label>
+              <div class="">
+                  <input v-model="password2" initial="off"  detect-change="off" type="password" maxlength="50" placeholder="重复口令" class="">
               </div>
           </div>
-          <div class="uk-form-row">
-              <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-user"></i> 注册</button>
+          <div class="">
+              <button type="submit" class="">注册</button>
           </div>
       </form>
   </div>
