--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.1.10/vue.min.js"></script>
-    <script src="../static/js/crypto.js"></script>
+    <script src="../../static/js/crypto.js"></script>
     <script xmlns:v-on="http://www.w3.org/1999/xhtml">
 
 $(function () {
@@ -74,7 +74,7 @@ $(function () {
                 </div>
             </div>
             <div class="">
-                <button type="submit" class="">s登录
+                <button type="submit" class="">登录
                 </button>
             </div>
         </form>
