--- a/www/templates/edit_blog.html
+++ b/www/templates/edit_blog.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.1.10/vue.min.js"></script>
     <script>
     var
         ID = '{{ id }}',
         action = '{{ action }}';
         // alert(action);
-    function initVM(blog) {
+    function initVM(blog, categeries) {
         var vm = new Vue({
             el: '#vm',
-            data: blog,
+            delimiters: ['${', '}'],
+            data: {blog: blog.blog, categeries: categeries.categeries, selected: 'a'},
             methods: {
                 submit: function (event) {
                     event.preventDefault();
-                    $.post(action, this.$data, function (r, status,xhr) {
+                    $.post(action, this.$data.blog, function (r, status,xhr) {
                         {
                             alert(status);
                             if(status == 'success'){
@@ -29,19 +30,27 @@
                 }
             }
         });
+        console.log(vm)
         $('#vm').show();
     }
 
     $(function () {
         if (ID) {
-            $.getJSON('/api/get_blog/' + ID, function (blog, status) {
-                $('#loading').hide();
-               // alert(blog);
-                initVM(blog);
+            var blog, categeries;
+            $.when(
+                $.getJSON('/api/get_blog/' + ID, function (data) {
+                    blog = data;
+                }),
+                $.getJSON('/api/get_all_categeries', function (data) {
+                    categeries = data;
+                })
+            ).then(function() {
+                if (blog && categeries) {
+                    initVM(blog, categeries);
+                }
             });
         }
         else {
-            $('#loading').hide();
             initVM({
                 title: '',
                 title_en: '',
@@ -56,57 +65,53 @@
   </head>
   <body>
 
-   <div id="error" class="">
-   </div>
-
-   <div id="loading" class="">
-       <span><i class=""></i> 正在加载...</span>
-   </div>
-
    <div id="vm" class="">
        <form v-on:submit="submit" class="">
            <div class=""></div>
            <div class="">
+               <div class="">
+                   <input value='{{ id }}' name="blog_id" type="hidden"/>
+               </div>
+           </div>
+           <div class="">
                <label class="">标题:</label>
                <div class="">
-                   <input v-model="title" name="title" type="text" placeholder="标题" class="">
+                   <input v-model="blog.title" name="title" type="text" placeholder="标题" class=""/>
                </div>
            </div>
            <div class="">
                <label class="">英文标题:</label>
                <div class="">
-                   <input v-model="title_en" rows="4" name="title_en" placeholder="英文标题" class=""></textarea>
+                   <input v-model="blog.title_en" rows="4" name="title_en" placeholder="英文标题" class=""/>
                </div>
            </div>
            <div class="">
                <label class="">摘要:</label>
                <div class="">
-                   <textarea v-model="summary" rows="4" name="summary" placeholder="摘要" class=""></textarea>
+                   <textarea v-model="blog.summary" rows="4" name="summary" placeholder="摘要" class=""></textarea>
                </div>
            </div>
            <div class="">
                <label class="">内容:</label>
                <div class="">
-                   <textarea v-model="content" rows="16" name="content" placeholder="内容" class=""></textarea>
+                   <textarea v-model="blog.content" rows="16" name="content" placeholder="内容" class=""></textarea>
                </div>
            </div>
            <div class="">
                <label class="">创建时间:</label>
                <div class="">
-                   <input v-model="created_at" rows="16" name="created_at" placeholder="创建时间" class=""></textarea>
+                   <input v-model="blog.created_at" rows="16" name="created_at" placeholder="创建时间" class=""/>
                </div>
            </div>
            <div class="">
                <label class="">分类:</label>
-               <select v-model="categery_id" name="categery_id" >
-                   {% for categery in all_categeries %}
-                   <option value ="{{ categery.id }}">{{ categery.name }}</option>
-                   {% endfor %}
+               <select v-model="blog.categery_id">
+                   <option v-for="categery in categeries" v-bind:value="categery.id">${ categery.name }</option>
                </select>
+               ${ blog.categery_id }
            </div>
-           title, title_en, summary, content, created_at, categery_id
            <div class="">
-               <button type="submit" class=""></i> 保存</button>
+               <button type="submit" class="">保存</button>
            </div>
        </form>
    </div>
