--- a/www/templates/sign_up.html
+++ b/www/templates/sign_up.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.1.10/vue.min.js"></script>
     <script src="../static/js/crypto.js"></script>
     <script xmlns:v-on="http://www.w3.org/1999/xhtml">
