--- a/www/templates/blog_show.html
+++ b/www/templates/blog_show.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="../../static/css/markdown.css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="../../static/css/hilight.css" media="screen" charset="utf-8" />
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
           config: ["MMLorHTML.js"],
