set the sidebar hide as default
Signed-off-by: seniorcandy <seniorgiftcandy@gmail.com>

--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -58,8 +58,8 @@
     <header id="header">
       <div class="mui-appbar mui--appbar-line-height">
         <div class="mui-container-fluid">
-          <a class="sidedrawer-toggle mui--visible-xs-inline-block mui--visible-sm-inline-block js-show-sidedrawer">☰</a>
-          <a class="sidedrawer-toggle mui--hidden-xs mui--hidden-sm js-hide-sidedrawer">☰</a>
+          <a class="sidedrawer-toggle js-show-sidedrawer">☰</a>
+          <!-- <a class="sidedrawer-toggle mui--hidden-xs mui--hidden-sm js-hide-sidedrawer">☰</a> -->
           <span class="mui--text-title mui--visible-xs-inline-block mui--visible-sm-inline-block">Brand.io</span>
         </div>
       </div>
