--- a/www/static/css/style.css
+++ b/www/static/css/style.css
@@ -47,7 +47,7 @@ buttons {
 
 #content-wrapper {
   min-height: 100%;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   margin-left: 0px;
   transition: margin-left 0.2s;
 
@@ -64,7 +64,7 @@ buttons {
   transition: margin-left 0.2s;
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   #header {
     left: 200px;
   }
@@ -96,7 +96,7 @@ buttons {
   body.hide-sidedrawer #footer {
     margin-left: 0;
   }
-}
+}*/
 
 
 /**
